eks-cluster/k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: node-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: node-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-app
    spec:
      containers:
      - image: 331881408266.dkr.ecr.ap-southeast-1.amazonaws.com/vasuki-dev-test:latest
        imagePullPolicy: Always
        name: node-app
        ports:
        - containerPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: redis-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      containers:
      - image: redis:latest
        imagePullPolicy: Always
        name: redis
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: redis-service
spec:
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: node-service
spec:
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30007
 # type: LoadBalancer
  type: NodePort
  selector:
    app.kubernetes.io/name: node-app
